# quantaalpha

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PARALLEL_01_CODE_REVIEW.md  PARALLEL_01_REVIEW.md  README.md  UNO_PARAM_IMPLEMENTATION.md  USAGE.md  analyze_cyq.py  analyze_cyq_chips.py  analyze_date_only_interfaces.py  analyze_income_vip_duplicates.py  analyze_interfaces.py  check_duplicates.py  check_duplicates_polars.py  check_duplicates_pyarrow.py  check_duplicates_stdlib.py  check_duplicates_v2.py  compare_interfaces.py  comprehensive_test.py  extract_cyq_chips.py  final_integration_test.py  interface_analysis.csv  interface_test_results.md  interfaces_from_folder.txt  interfaces_from_folder_sorted.txt  interfaces_from_txt.txt  interfaces_from_txt_sorted.txt  list_date_param_interfaces.py  list_interfaces.py  log.txt  missing_interface_configs.yaml  pyproject.toml  quantaalpha  quantaalpha_usage_guide.txt  real_world_test.py  requirements.txt  rules.md  run.sh  (+38 more)
.codebuddy/: settings.local.json
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  gsd.db-shm  gsd.db-wal  metrics.json  preferences.md
.serena/: project.yml
app/: README.md  api_manager.py  cache_key_generator.py  cache_manager.py  cache_monitor.py  config.py  config_adapter.py  config_manager.py  data_storage.py  data_validator.py  date_range_downloader.py  download_config.py  download_manager.py  download_scheduler.py  download_strategies.py  enhanced_download_config.py  enhanced_main_downloader.py  error_handler.py  global_rate_limiter.py  main.py  parallel_downloader.py  (+11 more)
(+2695 files in other folders)
